--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "defender-game",
   "version": "1.0.0",
-  "description": "\"Browser based game\"",
+  "description": "Browser based game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d dist"
   },
   "repository": {
     "type": "git",
